--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+@import url('https://fonts.cdnfonts.com/css/miama');
+
+
+
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 /* shared styles */
 
@@ -12,10 +17,93 @@
     font-weight: 400;
     font-style: normal;
   }
+  .Miama-font{
+    font-family: 'Miama', sans-serif;
+    font-weight: 400;
+}
   .bg-color{
     background-color: black;
   }
-  header{
-    max-width:1440px;
-    margin: 0 auto;
+  .bg-red{
+    background-color: #E6533C;
   }
+  .text-white{
+    color: #FFFFFF;
+  }
+  .display-flex{
+    display: flex;
+  }
+  /* header styles */
+  
+  header{
+    max-width:1140px;
+    margin: 50px auto;
+    color: white;
+    background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%);
+  }
+  .navbar{
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 90px;
+    padding: 10px 30px;
+   }
+   .nav-links{
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 2.5rem;
+    align-items: center;
+   }
+   .nav-items{
+     list-style: none;
+     margin-right: 40px;
+     font-size: 1.25rem;
+     cursor: pointer;
+   }
+   .brand{
+    color: #E6533C;
+    font-size: 2.25rem;
+    font-weight: 800;
+   }
+   .nav-link{
+     text-decoration: none;
+     font-weight: 400;
+   }
+   ul > :nth-child(1){
+    padding: 8px 15px;
+    border-radius: 46px;
+    align-items: center;
+    background-color: #E6533C;
+    font-weight: 600;
+   }
+
+/* banner styles */
+.banner-container{
+    padding: 10px 30px;
+    gap: 50px;
+}
+.banner-text-content{
+    width: 47%;
+}
+.banner-img{
+    width: 47%;
+}
+.banner-title{
+    color: rgb(255, 255, 255);
+    font-size: 4.88rem;
+}
+.span-title{
+    font-size: 4.88rem;
+}
+.banner-descripton{
+    font-size: 1rem;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.5);
+}
+.btn-primary{
+    background-color: rgb(230, 83, 60);
+    border-radius: 2.6rem;
+    padding: 16px 40px;
+    border: none;
+    color: #FFFFFF;
+    font-weight: 600;
+}
