--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-weight: 400;
 }
 /* shared styles */
 
@@ -75,10 +76,15 @@
     background-color: #E6533C;
     font-weight: 600;
    }
+   .ham-barger{
+    display: none;
+   }
 
 /* banner styles */
 .banner-container{
     padding: 10px 30px;
+    justify-content: center;
+    align-items: center;
     gap: 50px;
 }
 .banner-text-content{
@@ -86,6 +92,11 @@
 }
 .banner-img{
     width: 47%;
+    position: relative;
+
+}
+.banner-img img{
+    width: 100%;
 }
 .banner-title{
     color: rgb(255, 255, 255);
@@ -94,16 +105,94 @@
 .span-title{
     font-size: 4.88rem;
 }
-.banner-descripton{
+.banner-description{
     font-size: 1rem;
     font-weight: 400;
     color: rgba(255, 255, 255, 0.5);
+    margin: 28px auto;
 }
 .btn-primary{
     background-color: rgb(230, 83, 60);
     border-radius: 2.6rem;
-    padding: 16px 40px;
+    padding: 16px 30px;
     border: none;
     color: #FFFFFF;
+    font-size: 1.25rem;
     font-weight: 600;
+    width: 224px;
+    height: 54px;
+}
+.btn-download{
+    /* box-sizing: border-box; */
+    padding: 16px 30px;
+    border-radius: 2.6rem;
+    border:1px solid white;
+    font-size: 1.25rem;
+    font-weight: 600;
+    background-color: black;
+    margin-left: 14px;
+    width: 224px;
+    height: 54px;
+    
+}
+
+
+.box{
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    backdrop-filter: blur(20px);
+    background-color: rgba(48, 48, 48, 0.54);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    width: 206px;
+    height: 96px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    position: absolute;
+    bottom: 150px;
+
+}
+.round-div{
+    background-color: #E6533C;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+.box h3{
+    font-size: 1.5rem;
+    font-weight: 900;
+}
+.box p{
+    color: rgba(239, 237, 232, 0.65);
+    font-size: 1rem;
+    font-weight: 400;
+}
+.box-2{
+    box-sizing: border-box;
+    border-radius: 12px;
+    backdrop-filter: blur(20px);
+    background-color: rgba(48, 48, 48, 0.54);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    width: 190px;
+    height: 96px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    position: absolute;
+    top: 200px;
+    right: 30px;
+    padding: 17px 24px;
+
+}
+.box-2 h3{
+    font-size: 2.5rem;
+    font-weight: 900;
+}
+.box-2 p{
+    color: rgba(255, 255, 255, 0.65);
+    font-size: .75rem;
+    font-weight: 400;
+   
 }
