--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -69,4 +69,28 @@
         
     
     }
+    .section-title{
+        
+        font-size: 2rem;
+       
+    }
+    .card-container{
+        
+        grid-template-columns: repeat(1, 1fr);
+        gap: 54px;
+        justify-content: center;
+        align-items: center;
+      
+            
+    }
+    .card{
+        
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        /* height: 274px; */
+        padding: 10px;
+      
+    }
 }
