--- a/styles/styles.css
+++ b/styles/styles.css
@@ -246,7 +246,7 @@ main{
 .card-title{
     font-size: 1.25rem;
     font-weight: 600;
-    margin-top: 20px;
+    margin-top: 40px;
     text-align: center;
     margin-bottom: 10px;
 }
@@ -259,7 +259,7 @@ main{
 .card-img{
     width: 230px;
     height: 180px; 
-    margin-bottom: 36px;
+    margin-bottom: 30px;
     
 }
 .card-img img{
@@ -268,4 +268,41 @@ main{
     object-fit: cover;
     border-radius: 50%;
     
+}
+
+/* run-content-container styles */
+.run-easily-section{
+    gap: 30px;
+    margin: 0 auto;
+    background-color: #222222;
+    border-radius: 18px;
+    height: 371px;
+    
+}
+.run-content-container{
+    
+    
+    padding: 40px 54px;
+    width: 47%;
+}
+
+.run-img-container{
+    width: 47%;
+    padding: 40px 20px;
+}
+.run-img-container img{
+    width: 100%;
+    border-radius: 8px;
+}
+.run-title{
+    font-size: 3rem;
+    font-weight: 900px;
+    margin-bottom: 14px;
+
+}
+.run-description{
+    font-size: .9rem;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.5);
+    margin-bottom: 32px;
 }
