--- a/styles/styles.css
+++ b/styles/styles.css
@@ -306,3 +306,34 @@ main{
     color: rgba(255, 255, 255, 0.5);
     margin-bottom: 32px;
 }
+/* training-exercises styles */
+
+.training-exercises{
+    margin: 100px auto;
+}
+.training-img-container{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+}
+.row-1{
+    grid-column: 1/span 3;
+    grid-row: 1/span 6;
+}
+.row-2{
+    grid-column: 4/span 6;
+    grid-row: 1/span 6;
+}
+.row-3{
+    grid-column: 10span 3;
+    grid-row: 1/span 6;
+}
+.row-4{
+    grid-column: 1/span 2;
+}
+.row-5{
+    grid-column: 3/span 5;
+}
+.row-6{
+    grid-column: 8/span 5;
+}
