--- a/styles/styles.css
+++ b/styles/styles.css
@@ -200,8 +200,8 @@
 /* main section styles */
 
 main{
-    max-width: 1140px;
-    margin: 0 auto;
+    /* max-width: 1140px;
+    margin: 0 auto; */
 }
 .habits-container{
     margin: 100px auto;
@@ -277,6 +277,8 @@ main{
     background-color: #222222;
     border-radius: 18px;
     height: 371px;
+    max-width: 1140px;
+    margin: 0 auto;
     
 }
 .run-content-container{
@@ -307,33 +309,204 @@ main{
     margin-bottom: 32px;
 }
 /* training-exercises styles */
-
+.run-easily-section{
+    max-width: 1140px;
+    margin: 0 auto;
+}
 .training-exercises{
     margin: 100px auto;
+    max-width: 1140px;
+    
+}
+.training-title{
+    font-size: 3rem;
+    font-weight: 900;
+    margin-bottom: 14px;
+}
+.training-description{
+    font-size: .9rem;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.5);
+    margin-bottom: 58px;
+    max-width: 50%;
+    text-align: left;
 }
 .training-img-container{
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(12, 1fr);
+    gap: 10px;
+    
+    
+}
+.training-img-container img{
+    width: 100%;
+    height: 260px;
+    object-fit: cover;
+    opacity: 0.5;
+
 }
 .row-1{
-    grid-column: 1/span 3;
-    grid-row: 1/span 6;
+    grid-column: 1 / span 3;
+    grid-row: 1 / span 6;
+    position: relative;
+    background: rgba(6, 255, 210, 0.5);
 }
 .row-2{
-    grid-column: 4/span 6;
-    grid-row: 1/span 6;
+    grid-column: 4/ span 6;
+    grid-row: 1/ span 6;
+    position: relative;
+    background: rgba(255, 0, 0, 0.3);
 }
 .row-3{
-    grid-column: 10span 3;
-    grid-row: 1/span 6;
+    grid-column: 10 / span 3;
+    grid-row: 1/ span 6;
+    position: relative;
+    background: rgba(0, 0, 0, 0.5);
 }
 .row-4{
-    grid-column: 1/span 2;
+    grid-column: 1/ span 5;
+    grid-row: 7/ span 6;
+    position: relative;
 }
 .row-5{
-    grid-column: 3/span 5;
+    grid-column: 6/ span 3;
+    grid-row: 7/ span 6;
+    position: relative;
+    background: rgba(66, 255, 0, 0.3);
 }
 .row-6{
-    grid-column: 8/span 5;
+    grid-column: 9/ span 5;
+    grid-row: 7/ span 6;
+    position: relative;
+    background: rgba(0, 71, 255, 0.3);
 }
+
+.row-1 p{
+    font-size: .9rem;
+    font-weight: 500;
+    position: absolute;
+    bottom: 100px;
+    left: 30px;
+    color: #000000;
+    
+}
+.row-2 p{
+    font-size: .9rem;
+    font-weight: 500;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color:white;
+    
+}
+.row-3 p{
+    font-size: .9rem;
+    font-weight: 500;
+    position: absolute;
+    bottom: 100px;
+    left: 30px;
+    color: white;
+
+}
+.row-4 p{
+    font-size: .9rem;
+    font-weight: 500;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    color: white;
+  
+}
+.row-5 p{
+    font-size: .9rem;
+    font-weight: 500;
+    position: absolute;
+    bottom:50px;
+    left: 30px;
+    color: white;
+  
+}
+.row-6 p{
+    font-size: .9rem;
+    font-weight: 500;
+    position: absolute;
+    bottom:50px;
+    left: 30px;
+    color: white;
+  
+}
+
+/* bmi calculator section  */
+.bmi-calculator-section h3{
+  
+    text-align: center;
+    
+}
+.bmi-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+    text-align: left;
+}
+.bmi-description{
+    width: 22%;
+    text-align: left;
+}
+.bmi-container{
+    margin-top: 50px;
+    width: 100%;
+    padding: 50px 180px;
+    background-color: #222222;
+    gap: 150px;
+    justify-content: center;
+    align-items: center;
+}
+
+table{
+    border-collapse: collapse;
+    padding: 15px 18px;
+}
+thead th{
+    color: white;
+    font-size: 1rem;
+    font-weight: 500;
+    color: white;
+    padding: 15px 18px;
+    border: 1px solid gray;
+}
+table td{
+    border: 1px solid gray;
+    padding: 15px 18px;
+    font-size: 0.9rem;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.5);
+}
+.calculator-chart h3{
+    font-size: 1.8rem;
+    font-weight: 900;
+    text-align: left;
+    margin-bottom: 50px;
+}
+.calculate-title{
+    font-size: 1.8rem;
+    font-weight: 900;
+    text-align: left;
+    color: white;
+    width: 500px;
+}
+.calculate-description{
+    font-size: .9rem;
+    font-weight: 400;
+    text-align: left;
+}
+ form input, select, label{
+    padding: 12px 40px 12px 20px;
+    border-radius: 8px;
+    background: rgba(255, 255, 255, 0.1);
+    /* background-color: black; */
+    width: 282px;
+    height: 48px;
+ }
