--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -123,6 +123,7 @@
 .training-img-container{
   
     grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, 1fr);
  
 }
 .training-description, .training-title{
@@ -183,4 +184,57 @@ form input, select{
  .select-2{
     width: 96%;
  }
+
+ /* meet team section */
+ .training-img-container{
+   
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    padding: 20px;
+    height: 100%;
+   
+
+}
+.training-img-container img{
+    width: 100%;
+    height: 100%;
+  
+    
+    
+}
+.grid-item-1{
+    grid-column: 1/span 1;
+    grid-row: 1/span 1;
+    position: relative;
+}
+.grid-item-2{
+    grid-column: 1/span 1 ;
+    grid-row: 2/span 1;
+    position: relative;
+}
+.grid-item-3{
+    grid-column: 1/span 1 ;
+    grid-row: 3/span 1;
+    position: relative;
+}
+.grid-item-4{
+    grid-column: 1/span 1 ;
+    grid-row: 4/span 1;
+    position: relative;
+}
+.grid-item-5{
+    grid-column: 1/span 1;
+    grid-row: 5/span 1;
+    position: relative;
+}
+.grid-item-6{
+    grid-column: 1/span 1 ;
+    grid-row: 6/span 1;
+    position: relative;
+}
+.transform{
+    position: absolute;
+    bottom: 100px;
+    left: 50px;
+}
 }
