--- a/styles/styles.css
+++ b/styles/styles.css
@@ -534,3 +534,75 @@ table td{
     margin-left: 20px;
   
  }
+
+ /* meet team section  */
+ .team-section{
+    max-width: 1140px;
+    margin: 100px auto;
+ }
+ .training-img-container{
+   
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+    gap: 20px;
+    border-radius: 18px;
+    background: rgba(255, 255, 255, 0.1);
+    margin-top: 70px;
+    height: 600px;
+    padding: 20px;
+  
+}
+
+.training-img-container img{
+    width: 100%;
+    border-radius: 10px;
+    object-fit: cover; 
+    
+    
+}
+    
+.grid-item-1{
+    grid-column: 1/span 4;
+    grid-row: 1/span 1;
+    position: relative;
+}
+.grid-item-2{
+    grid-column: 5/span 4 ;
+    grid-row: 1/span 1;
+    position: relative;
+}
+.grid-item-3{
+    grid-column: 9/span 4 ;
+    grid-row: 1/span 1;
+    position: relative;
+}
+.grid-item-4{
+    grid-column: 1/span 4 ;
+    grid-row: 2/span 1;
+    position: relative;
+}
+.grid-item-5{
+    grid-column: 5/span 4;
+    grid-row: 2/span 1;
+    position: relative;
+}
+.grid-item-6{
+    grid-column: 9/span 4 ;
+    grid-row: 2/span 1;
+    position: relative;
+}
+.transform{
+    position: absolute;
+    bottom: 50px;
+    left: 50px;
+}
+.transform h3{
+   font-size: 1rem;
+   font-weight: 500;
+}
+.transform p{
+   font-size: .9rem;
+   font-weight: 400;
+   color:rgba(255, 255, 255, 0.1);
+}
