added footer section and responsive

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -237,4 +237,13 @@ form input, select{
     bottom: 100px;
     left: 50px;
 }
+
+/* footer section */
+
+.footer-section{
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    padding:60px;
+}
 }
