--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,7 +69,7 @@
      text-decoration: none;
      font-weight: 400;
    }
-   ul > :nth-child(1){
+   nav> ul > :nth-child(1){
     padding: 8px 15px;
     border-radius: 46px;
     align-items: center;
@@ -605,4 +605,52 @@ table td{
    font-size: .9rem;
    font-weight: 400;
    color:rgba(255, 255, 255, 0.1);
+}
+
+/* footer section */
+footer{
+    background: rgba(255, 255, 255, 0.1);
+}
+.footer-section{
+    justify-content: space-between;
+    align-items: center;
+    gap: 50px;
+    padding:60px 190px;
+}
+.brand-content{
+    flex-grow: 1;
+}
+.footer-description{
+    color: rgba(255, 255, 255, 0.5);
+    font-weight: 400;
+    font-size: .9rem;
+    text-align: left;
+    width: 300px;
+    margin-top: 20px;
+}
+.footer-links-content{
+    flex-grow: 1;
+}
+.footer-links-content-2{
+    flex-grow: 1;
+}
+.footer-link-title{
+    font-size: 2rem;
+    font-weight: 700;
+}
+.text-gray{
+    color: rgba(255, 255, 255, 0.5);
+    font-weight: 400;
+    font-size: .9rem;
+    text-align: left;
+}
+.copy-rights{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+}
+footer hr{
+    width: 80%;
+    margin: 0 auto;
 }
