--- a/styles/styles.css
+++ b/styles/styles.css
@@ -607,6 +607,54 @@ table td{
    color:rgba(255, 255, 255, 0.1);
 }
 
+/* need exercise styles */
+.need-card-container{
+    max-width: 1140px;
+    margin: 50px auto;
+    display: flex;
+   background-image:linear-gradient( rgba(100, 100, 150, 0.155), rgba(5, 5, 0.5, 0.9)),
+    url("../images/exercise6.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 500px;
+    background-position: center;
+    justify-content: center;
+    align-items: center;
+    border-radius: 18px;
+    padding: 0 30px;
+   
+    
+
+}
+.need-card{
+    backdrop-filter: blur(10px);
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    border-radius: 10px;
+}
+.need-card img{
+    max-width: 100%;
+    max-height: 100%;
+    opacity: 0.9;
+    border-radius: 15px;
+}
+.card-title-1{
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-align: center;
+    color: white;
+
+}
+.card-description-1{
+    color: rgba(255, 255, 255, 0.9);
+    font-weight: 400;
+    font-size: .9rem;
+    text-align: center;
+}
+
 /* footer section */
 footer{
     background: rgba(255, 255, 255, 0.1);
@@ -654,3 +702,5 @@ footer hr{
     width: 80%;
     margin: 0 auto;
 }
+
+/*  */
